DRAFR: added a new button Description with dependencies
