# internal/handler/user/UpdateUser.go
@@ -14,10 +14,10 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        id   path      string  true  "пользовтель обновлен"
-// @Success      204  {object}  nil     "Пользователь успешно обновлен"
+// @Success      201  {object}  nil     "Пользователь успешно обновлен"
 // @Failure      400  {object}  map[string]interface{} "Неверный формат ID"
 // @Failure      404  {object}  map[string]interface{} "Пользователь не найден"
-// @Router       /api/v1/users/{id} [put]
+// @Router       /users/{id} [put]
 func (h *Handler) UpdateUser(c *gin.Context) {
 	var u models.User
 	id := c.Param("id")
